# test

./: .gitmodules  CMakeLists.txt
res/shaders/: shader.fs
src/: camera.cpp  camera.h  glfw_common.h  main.cpp  shader.cpp  shader.h
